# kmua-bot

./: 404.html  Dockerfile  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 5ad3da643ecc_message_search_enabled_for_chatdata.py  6ff4aa4c3270_add_title_permissions_to_chatdata.py  a7203cd2ce37_adapt_mysql.py
docs/docs/: self-host.md
help/: index.html
kmua/: __main__.py  handlers.py  middlewares.py
kmua/callbacks/: bilibili.py  chatconfig.py  chatdata.py  chatinfo.py  help.py  image.py  jobs.py  manage.py  manyacg.py  pin.py  quote.py  reply.py  search.py  setu.py  start.py  title.py  userdata.py  waifu.py
kmua/common/: quote.py  user.py  utils.py  waifu.py
kmua/common/openai/: __init__.py
kmua/dao/: __init__.py  association.py  chat.py  migrate.py  waifu.py
kmua/models/: models.py
license/: index.html
search/: search_index.json
self-host/: index.html
