[project]
name = "kmua-bot"
version = "2.8.1"
description = "A Telegram Bot"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.6",
    "graphviz>=0.20.3",
    "httpx>=0.27.2",
    "httpx-sse>=0.4.0",
    "pillow>=11.0.0",
    "python-telegram-bot[all]>=21.10",
    "zhconv>=1.4.3",
    "sqlalchemy>=2.0.34",
    "loguru>=0.7.2",
    "alembic>=1.13.2",
    "uvloop>=0.20.0",
    "cachetools>=5.5.0",
    "redis>=5.2.0",
    "psutil>=6.1.0",
    "meilisearch>=0.31.5",
    "orjson>=3.10.7",
    "pilmoji>=2.0.4",
    "emoji==2.11",
    "mysql-connector-python>=9.1.0",
    "openai>=1.52.2",
    "cryptography>=44.0.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.9.3"]

[tool.ruff]
lint.select = ["I"]
